Push all nodes to Neo4J local, push new property of case_id and source_image to Neo4J aura

--- a/notebooks/knowledge_extraction/import-to-Neo4j.ipynb
+++ b/notebooks/knowledge_extraction/import-to-Neo4j.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Connected to Neo4J!\n"
+      "Connected to Neo4J!\n"
      ]
     }
    ],
@@ -3201,6 +3201,383 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CONNECTING TO LOCAL DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neo4j connection successful!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "\n",
+    "# Local Neo4j settings\n",
+    "uri = \"bolt://localhost:7687\"\n",
+    "username = \"neo4j\"\n",
+    "password = \"test12345\"\n",
+    "\n",
+    "# Connect to Neo4j\n",
+    "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
+    "\n",
+    "# Quick test: run a Cypher query\n",
+    "with driver.session() as session:\n",
+    "    result = session.run(\"RETURN 'Neo4j connection successful!' AS message\")\n",
+    "    print(result.single()[\"message\"])\n",
+    "\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/15/_nms3dx938z02zxw1j0ns_4h4n_pl4/T/ipykernel_39007/1758827117.py:90: DeprecationWarning: Using a driver after it has been closed is deprecated. Future versions of the driver will raise an error.\n",
+      "  with driver.session() as session:\n",
+      "[#E849]  _: <CONNECTION> error: Failed to read from defunct connection IPv4Address(('localhost', 7687)) (ResolvedIPv4Address(('127.0.0.1', 7687))): OSError('No data')\n",
+      "Transaction failed and will be retried in 1.0783075397400381s (Failed to read from defunct connection IPv4Address(('localhost', 7687)) (ResolvedIPv4Address(('127.0.0.1', 7687))))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading baml_extracted_20_cases.json ...\n",
+      "Loading baml_extracted_remaining_cases.json ...\n",
+      "Loading manual_book_fault_reports.json ...\n",
+      "Loaded total cases: 135\n",
+      "All cases imported into local Neo4j!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import json\n",
+    "\n",
+    "def create_fault_graph(tx, data):\n",
+    "    loc_name = data[\"fault_location\"][\"name\"]\n",
+    "    machine = data[\"fault_location\"].get(\"machine\", None)\n",
+    "    # Create or merge FaultLocation node\n",
+    "    if machine:\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MERGE (fl:FaultLocation {name: $loc_name})\n",
+    "            SET fl.machines = apoc.coll.toSet(coalesce(fl.machines, []) + [$machine])\n",
+    "            \"\"\",\n",
+    "            loc_name=loc_name,\n",
+    "            machine=machine\n",
+    "        )\n",
+    "    else:\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MERGE (fl:FaultLocation {name: $loc_name})\n",
+    "            \"\"\",\n",
+    "            loc_name=loc_name\n",
+    "        )\n",
+    "\n",
+    "    # Fault Symptoms, Reasons, Measures\n",
+    "    for symptom in data.get(\"fault_symptoms\", []):\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MERGE (fs:FaultSymptom {description: $symptom})\n",
+    "            WITH fs\n",
+    "            MATCH (fl:FaultLocation {name: $loc_name})\n",
+    "            MERGE (fl)-[:HAS_FAULT]->(fs)\n",
+    "            \"\"\",\n",
+    "            symptom=symptom,\n",
+    "            loc_name=loc_name\n",
+    "        )\n",
+    "        # Fault Reason\n",
+    "        for reason in data.get(\"fault_reason\", []):\n",
+    "            tx.run(\n",
+    "                \"\"\"\n",
+    "                MERGE (fr:FaultReason {name: $reason_name})\n",
+    "                WITH fr\n",
+    "                MATCH (fs:FaultSymptom {description: $symptom})\n",
+    "                MERGE (fs)-[:CAUSED_BY]->(fr)\n",
+    "                \"\"\",\n",
+    "                reason_name=reason[\"name\"],\n",
+    "                symptom=symptom\n",
+    "            )\n",
+    "        # Fault Measure\n",
+    "        for measure in data.get(\"fault_measures\", []):\n",
+    "            tx.run(\n",
+    "                \"\"\"\n",
+    "                MERGE (fm:FaultMeasure {description: $measure_desc})\n",
+    "                WITH fm\n",
+    "                MATCH (fs:FaultSymptom {description: $symptom})\n",
+    "                MERGE (fs)-[r:MITIGATED_BY]->(fm)\n",
+    "                SET r.resolution_status = $status\n",
+    "                \"\"\",\n",
+    "                measure_desc=measure[\"description\"],\n",
+    "                symptom=symptom,\n",
+    "                status=data.get(\"resolution_status\", \"Unknown\")\n",
+    "            )\n",
+    "\n",
+    "def load_json_file(filepath):\n",
+    "    with open(filepath, \"r\") as f:\n",
+    "        if filepath.endswith(\".jsonl\"):\n",
+    "            return [json.loads(line) for line in f]\n",
+    "        else:\n",
+    "            return json.load(f)\n",
+    "\n",
+    "folder_path = \"/Users/wbm/Documents/BIT/Thesis/graphRAG-industrial-fault-diagnosis/data/processed\"\n",
+    "files = [\n",
+    "    \"baml_extracted_20_cases.json\",\n",
+    "    \"baml_extracted_remaining_cases.json\",\n",
+    "    \"manual_book_fault_reports.json\"\n",
+    "]\n",
+    "# Add more files as needed\n",
+    "\n",
+    "all_cases = []\n",
+    "\n",
+    "for file in files:\n",
+    "    path = os.path.join(folder_path, file)\n",
+    "    print(f\"Loading {file} ...\")\n",
+    "    data = load_json_file(path)\n",
+    "    all_cases.extend(data)\n",
+    "\n",
+    "print(f\"Loaded total cases: {len(all_cases)}\")\n",
+    "\n",
+    "with driver.session() as session:\n",
+    "    for i, entry in enumerate(all_cases):\n",
+    "        # Handle \"result\" or flat dict\n",
+    "        if \"result\" in entry:\n",
+    "            data = entry[\"result\"]\n",
+    "        else:\n",
+    "            data = entry\n",
+    "        if \"fault_location\" in data:\n",
+    "            session.execute_write(create_fault_graph, data)\n",
+    "        else:\n",
+    "            print(f\"Skipping case #{i}: missing fault_location\")\n",
+    "print(\"All cases imported into local Neo4j!\")\n",
+    "driver.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pushing New Property \"case_id\" for each Nodes\n",
+    "\n",
+    "This is done for traceability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/15/_nms3dx938z02zxw1j0ns_4h4n_pl4/T/ipykernel_39007/2817769021.py:73: DeprecationWarning: write_transaction has been renamed to execute_write\n",
+      "  session.write_transaction(update_case_ids, case_id, data)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case IDs successfully added to all entities (20 cases + remaining cases)!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Load the JSON file (20 cases)\n",
+    "folder_path = \"/Users/wbm/Documents/BIT/Thesis/graphRAG-industrial-fault-diagnosis/data/processed\"\n",
+    "file_20_cases = os.path.join(folder_path, \"baml_extracted_20_cases.json\")\n",
+    "file_remaining_cases = os.path.join(folder_path, \"baml_extracted_remaining_cases.json\")\n",
+    "\n",
+    "with open(file_20_cases, \"r\") as f:\n",
+    "    data_20_cases = json.load(f)\n",
+    "\n",
+    "with open(file_remaining_cases, \"r\") as f:\n",
+    "    data_remaining_cases = json.load(f)\n",
+    "\n",
+    "# Setup Neo4j driver\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "uri = os.getenv(\"NEO4J_URI\")\n",
+    "username = os.getenv(\"NEO4J_USER\")\n",
+    "password = os.getenv(\"NEO4J_PASS\")\n",
+    "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
+    "\n",
+    "def update_case_ids(tx, case_id, data):\n",
+    "    # FaultLocation\n",
+    "    tx.run(\n",
+    "        \"\"\"\n",
+    "        MATCH (n:FaultLocation {name: $loc_name})\n",
+    "        SET n.case_ids = coalesce(n.case_ids, []) + CASE WHEN $case_id IN coalesce(n.case_ids, []) THEN [] ELSE [$case_id] END\n",
+    "        \"\"\",\n",
+    "        loc_name=data[\"fault_location\"][\"name\"],\n",
+    "        case_id=case_id\n",
+    "    )\n",
+    "\n",
+    "    # FaultSymptoms\n",
+    "    for symptom in data[\"fault_symptoms\"]:\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MATCH (n:FaultSymptom {description: $symptom})\n",
+    "            SET n.case_ids = coalesce(n.case_ids, []) + CASE WHEN $case_id IN coalesce(n.case_ids, []) THEN [] ELSE [$case_id] END\n",
+    "            \"\"\",\n",
+    "            symptom=symptom,\n",
+    "            case_id=case_id\n",
+    "        )\n",
+    "\n",
+    "    # FaultReasons\n",
+    "    for reason in data[\"fault_reason\"]:\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MATCH (n:FaultReason {name: $reason_name})\n",
+    "            SET n.case_ids = coalesce(n.case_ids, []) + CASE WHEN $case_id IN coalesce(n.case_ids, []) THEN [] ELSE [$case_id] END\n",
+    "            \"\"\",\n",
+    "            reason_name=reason[\"name\"],\n",
+    "            case_id=case_id\n",
+    "        )\n",
+    "\n",
+    "    # FaultMeasures\n",
+    "    for measure in data[\"fault_measures\"]:\n",
+    "        tx.run(\n",
+    "            \"\"\"\n",
+    "            MATCH (n:FaultMeasure {description: $measure_desc})\n",
+    "            SET n.case_ids = coalesce(n.case_ids, []) + CASE WHEN $case_id IN coalesce(n.case_ids, []) THEN [] ELSE [$case_id] END\n",
+    "            \"\"\",\n",
+    "            measure_desc=measure[\"description\"],\n",
+    "            case_id=case_id\n",
+    "        )\n",
+    "\n",
+    "# Now update the graph nodes for all 20 cases\n",
+    "with driver.session() as session:\n",
+    "    for entry in data_20_cases + data_remaining_cases:\n",
+    "        case_id = entry.get(\"case_id\")\n",
+    "        data = entry[\"result\"]\n",
+    "        session.write_transaction(update_case_ids, case_id, data)\n",
+    "\n",
+    "driver.close()\n",
+    "print(\"Case IDs successfully added to all entities (20 cases + remaining cases)!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Push new property \"source_image\" to all related nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/15/_nms3dx938z02zxw1j0ns_4h4n_pl4/T/ipykernel_39007/2577595690.py:60: DeprecationWarning: write_transaction has been renamed to execute_write\n",
+      "  session.write_transaction(update_source_image, source_image, entry)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "source_image property successfully added to all entities from manual_book_fault_reports.json!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from neo4j import GraphDatabase\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load data\n",
+    "folder_path = \"/Users/wbm/Documents/BIT/Thesis/graphRAG-industrial-fault-diagnosis/data/processed\"\n",
+    "file_manual_book = os.path.join(folder_path, \"manual_book_fault_reports.json\")\n",
+    "with open(file_manual_book, \"r\") as f:\n",
+    "    data_manual_book = json.load(f)\n",
+    "\n",
+    "# Neo4j setup\n",
+    "load_dotenv()\n",
+    "uri = os.getenv(\"NEO4J_URI\")\n",
+    "username = os.getenv(\"NEO4J_USER\")\n",
+    "password = os.getenv(\"NEO4J_PASS\")\n",
+    "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
+    "\n",
+    "def update_source_image(tx, source_image, data):\n",
+    "    # FaultLocation\n",
+    "    tx.run(\"\"\"\n",
+    "        MATCH (n:FaultLocation {name: $loc_name})\n",
+    "        SET n.source_image = $source_image\n",
+    "        \"\"\",\n",
+    "        loc_name=data[\"fault_location\"][\"name\"],\n",
+    "        source_image=source_image\n",
+    "    )\n",
+    "    # FaultSymptoms\n",
+    "    for symptom in data[\"fault_symptoms\"]:\n",
+    "        tx.run(\"\"\"\n",
+    "            MATCH (n:FaultSymptom {description: $symptom})\n",
+    "            SET n.source_image = $source_image\n",
+    "            \"\"\",\n",
+    "            symptom=symptom,\n",
+    "            source_image=source_image\n",
+    "        )\n",
+    "    # FaultReasons\n",
+    "    for reason in data[\"fault_reason\"]:\n",
+    "        tx.run(\"\"\"\n",
+    "            MATCH (n:FaultReason {name: $reason_name})\n",
+    "            SET n.source_image = $source_image\n",
+    "            \"\"\",\n",
+    "            reason_name=reason[\"name\"],\n",
+    "            source_image=source_image\n",
+    "        )\n",
+    "    # FaultMeasures\n",
+    "    for measure in data[\"fault_measures\"]:\n",
+    "        tx.run(\"\"\"\n",
+    "            MATCH (n:FaultMeasure {description: $measure_desc})\n",
+    "            SET n.source_image = $source_image\n",
+    "            \"\"\",\n",
+    "            measure_desc=measure[\"description\"],\n",
+    "            source_image=source_image\n",
+    "        )\n",
+    "\n",
+    "with driver.session() as session:\n",
+    "    for entry in data_manual_book:\n",
+    "        source_image = entry.get(\"source_image\")\n",
+    "        if source_image:\n",
+    "            session.write_transaction(update_source_image, source_image, entry)\n",
+    "        else:\n",
+    "            print(\"Skipped entry with no source_image:\", entry)\n",
+    "\n",
+    "driver.close()\n",
+    "print(\"source_image property successfully added to all entities from manual_book_fault_reports.json!\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3210,7 +3587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -3224,7 +3601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
